alignments bugs
fix

--- a/src/app/components/side-top-nav/side-top-nav.component.scss
+++ b/src/app/components/side-top-nav/side-top-nav.component.scss
@@ -171,7 +171,7 @@
         color: #fff;
         font-size: 0.875rem;
         padding: 0 12px;
-        border-radius: 4px 0 0 4px;
+        border-radius: 4px;
         height: 100%;
 
         &:hover {
